Bug 111061 - Dell 5737 backlight does not function
Summary: Dell 5737 backlight does not function
Status: RESOLVED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: acpi_other
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-21 00:59 UTC by erusan
Modified: 2016-02-05 18:26 UTC (History)
1 user (show)

See Also:
Kernel Version: 4.3.0
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description erusan 2016-01-21 00:59:25 UTC
Description:

Backlight control does not work, though OSD is displayed. Attempting to change backlight results in system eventually freezing.

Workaround:

Boot with kernel parameter acpi_backlight=native

No userspace workarounds are necessary with this parameter.

ls /sys/class/backlight outputs only "intel_backlight" with the parameter, whereas output is "dell_backlight  intel_backlight" without it.

Other:

Workaround used to be patching gnome-settings-daemon and using an xorg.conf file (both discoverable in this thread: https://bbs.archlinux.org/viewtopic.php?id=195967)

Hans de Goede suggested this commit might be the problem: https://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git/commit/?id=08a56226d

I was able to revert the patch and compile the kernel, but I'm unable to actually boot the kernel to confirm that reverting the patch fixes the problem. I'd be willing to try a patched kernel for a current fedora or debian testing build if someone more capable feels like uploading a package.

Filing this bug as requested in kernel bug #21012 if someone wants to follow the conversation there.
Comment 1 Hans de Goede 2016-01-21 13:26:33 UTC
Hi,

Thanks for filing a new bug for tracking this. Given that things work with "acpi_backlight=native" and that
"acpi_backlight=native" will likely be the default on your laptop (*), I think that indeed removing the
quirk which forces "acpi_backlight=vendor" on your laptop will fix things to work OOTB.

Here is a Fedora kernel scratch-build (note currently still building) which has the commit which I believe is the culprit reverted:

http://koji.fedoraproject.org/koji/taskinfo?taskID=12634323

Can you please give this kernel a try once it is finished building ?

Note please do not wait too long scatchbuilds get deleted after aprox. a week.

Regards,

Hans




*) The default gets picked based on if your BIOS is win8 ready or not, so it is not fixed
Comment 2 erusan 2016-01-21 18:33:24 UTC
Fedora 23 with the patched kernel (thanks for doing that) works OOTB just fine and ls /sys/class/backlight outputs only "intel_backlight"
Comment 3 Hans de Goede 2016-01-22 10:41:29 UTC
Thanks for testing, I've send a patch doing the revert upstream.
Comment 4 Hans de Goede 2016-02-05 18:26:52 UTC
The patch has been merged upstream, closing.

Note You need to log in before you can comment on or make changes to this bug.